[tool]
[tool.poetry]
authors = ["MoJ Data Engineering <dataengineering@digital.justice.gov.uk>"]
description = "A Python wrapper to run glue jobs on AWS."
license = "MIT"
name = "glue-job-runner"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = ">=1.9.205"
jsonschema = ">=3.0.0"
parameterized = "0.7.*"
python = ">=3.6"
regex = "^2020.7.14"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
